# student-performance-analytics

./: .env.example  .gitignore  README.md  pyproject.toml
database/: database.py  models.py  queries.py
notebooks/: exploratory_analysis.ipynb
scripts/: dev.sh
src/analytics/: marks_analysis.py
src/api/: main.py
src/cli/: main.py
src/dashboard/: app.py
